--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -43,6 +43,7 @@ header .nav-btn{
     color: var(--textColor);
     visibility: hidden;
     opacity: 0;
+    font-size: 1.8rem;
 }
 
 @media only screen and (max-width: 1024px){
@@ -58,6 +59,7 @@ header .nav-btn{
         height: 100%;
         width: 100%;
         display: flex;
+        flex-direction: column;
         align-items: center;
         justify-content: center;
         gap: 1.5rem;
@@ -68,5 +70,15 @@ header .nav-btn{
 
     header .responsive-nav{
         transform: none;
+    }
+
+    nav .nav-close-btn{
+        position: absolute;
+        top: 2rem;
+        right: 2rem;
+    }
+
+    nav a{
+        font-size: 1.5rem;
     }
 }
